--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Chris Gullickson's Software Development Blog
 header-img: img/home-bg.png
 email: cgullickson5@gmail.com
 copyright_name: cgullickson
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Learning to Program One Day at a Time
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  cgullickson
